Updated the links and the fav

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Website of Andrew Chen</title>
-    <link rel="icon" href="https://i.ibb.co/MkH9kqz/ac.png">
+    <link rel="icon" href="favicon.png">
     <style>
         *{
             --cyan:#04a0ae;
@@ -101,10 +101,10 @@
     <button style="position:absolute;right:0;top:0;z-index:10000;" onclick="dmcookie();document.body.classList.toggle('dm');document.querySelectorAll('.navbarlink').forEach(element=>element.classList.toggle('dmm'))">Toggle light or dark mode</button>
     <nav>
         <span>{Hi I'm Andrew}</span>
-        <a class="navbarlink" style="left:0;">link1</a>
-        <a class="navbarlink" style="left:25%;">link1</a>
-        <a class="navbarlink" style="left:50%;">link1</a>
-        <a class="navbarlink" style="left:75%;">link1</a>
+        <a class="navbarlink" href="/about" style="left:0;">About</a>
+        <a class="navbarlink" href="/portfolio" style="left:25%;">Portfolio</a>
+        <a class="navbarlink" href="/contact" style="left:50%;">Contact</a>
+        <a class="navbarlink" href="/other" style="left:75%;">Other</a>
     </nav>
     <main style="text-align:center;">
         <header>
