annoying favicon thing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Website of Andrew Chen</title>
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="https://raw.githubusercontent.com/actiniumn404/actiniumn404.github.io/main/favicon.png">
     <style>
         *{
             --cyan:#04a0ae;
