--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
                 <a href="https://discordapp.com/users/728297793646624819" target="_blank">
                     <img class="icon" onmouseover="findmeon('Discord', '#728297793646624819')" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" alt="discord icon" height=32px>
                 </a>
+                <a href="https://stackoverflow.com/users/15947148/actinium404" target="_blank">
+                    <img class="icon" onmouseover="findmeon('Stack Overflow', '@actinium404')" src="https://cdn.sstatic.net/Sites/stackoverflow/Img/favicon.ico?v=ec617d715196" alt="Stack Overflow icon">
+                </a>
                 <div id="findmeon">
                     <span style="font-size:18px;">Find me on <span id="sitename" style="color:yellow;"></span>:</span>
                     <h2 id="username" style="color:yellow;font-size:24px;overflow:auto;overflow-y: hidden;"></h2>
