--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     </script>
 </head>
 <body>
+    <iframe src="/navbar" width="100%" style="position:absolue;border:none;overflow:hidden !important;" height="180px">You need to enable iframe to see the navbar</iframe>
     <button style="position:absolute;right:0;top:0;z-index:10000;" onclick="dmcookie();document.body.classList.toggle('dm');document.querySelectorAll('.navbarlink').forEach(element=>element.classList.toggle('dmm'))">Toggle light or dark mode</button>
     <nav>
         <span>{Hi I'm Andrew}</span>
@@ -108,7 +109,7 @@
     </nav>
     <main style="text-align:center;">
         <header>
-            <h1 style="margin-top:35vh;">{Hi, I'm Andrew!}</h1>
+            <h1 style="margin-top:17vh;">{Hi, I'm Andrew!}</h1>
             <hr style="width:200px;">
             <h2>Self learning software developer</h2>
             <section>
