--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <nav>
         <span><a href="/">{Hi I'm Andrew}</a></span>
         <div>
-            <a class="navbarlink dmm" href="/about" style="left:0;">About</a>
-            <a class="navbarlink dmm" href="/portfolio" style="left:25%;">Portfolio</a>
-            <a class="navbarlink dmm" href="/contact" style="left:50%;">Contact</a>
-            <a class="navbarlink dmm" href="/other" style="left:75%;">Other</a>
+            <a class="navbarlink" href="/about" style="left:0;">About</a>
+            <a class="navbarlink" href="/portfolio" style="left:25%;">Portfolio</a>
+            <a class="navbarlink" href="/contact" style="left:50%;">Contact</a>
+            <a class="navbarlink" href="/other" style="left:75%;">Other</a>
         </div>
     </nav>
     <button style="position:absolute;right:0;top:0;z-index:10000;" onclick="dmcookie();document.body.classList.toggle('dm');document.querySelectorAll('.navbarlink').forEach(element=>element.classList.toggle('dmm'))">Toggle light or dark mode</button>
