--- a/404.html
+++ b/404.html
@@ -183,10 +183,10 @@
     <nav>
         <span><a href="/">{Hi I'm Andrew}</a></span>
         <div>
-            <a class="navbarlink" href="/about" style="left:0;">About</a>
-            <a class="navbarlink" href="/portfolio" style="left:25%;">Portfolio</a>
-            <a class="navbarlink" href="/contact" style="left:50%;">Contact</a>
-            <a class="navbarlink" href="/other" style="left:75%;">Other</a>
+            <a class="navbarlink dmm" href="/about" style="left:0;">About</a>
+            <a class="navbarlink dmm" href="/portfolio" style="left:25%;">Portfolio</a>
+            <a class="navbarlink dmm" href="/contact" style="left:50%;">Contact</a>
+            <a class="navbarlink dmm" href="/other" style="left:75%;">Other</a>
         </div>
     </nav>
     <main>
@@ -194,7 +194,7 @@
         <h2>There is something missing here...</h2>
         <h1><b><u>And I can't find it</u></b></h1>
         <a id="missing" href="/missing"><button>Oh No! I can help</button></a>
-        <a id="windowback" style="top:65%;"><button onclick="history.back()">&lt;No thanks, take me back</button></a>
+        <a id="windowback" href="/" style="top:65%;"><button>&lt;No thanks, take me back</button></a>
     </main>
 </body>
 </html>
