--- a/portfolio.html
+++ b/portfolio.html
@@ -120,6 +120,12 @@
             height:290px !important;
             object-fit: cover;
         }
+        main{
+            display:flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        }
     </style>
     <script>
 
@@ -143,7 +149,7 @@
                     <h1>Among You.py</h1>
                     <b>
                         <p>
-                            Bored at home? What would you do? Me with my friend created a full up python version of Among Us (developed by InnerSloth.)
+                            Bored at home? What would you do? Me with my friend (W. Wu (No GH account yet)) created a full up python version of Among Us (developed by InnerSloth.)
                         </p>
                     </b>
                     <a href="https://github.com/actiniumn404/Among-you" target="_blank">
@@ -198,7 +204,7 @@
                 <div class="project_des" style="background-color:coral;">
                     <h1>Jeopardy Multiplayer</h1>
                     <b><p>
-                        <u><span style="font-size:24px;">WORK IN PROGRESS</span></u> Jeopardy Multiplayer is the way to play a game of jeopardy without having to get into a meeting and screen sharing. Using Socket.io, there is a real time enviorment
+                        Jeopardy Multiplayer is a way to play a game of jeopardy without having to get into a meeting and screen sharing. This was a colab with by friend W. Wu (No GitHub account).
                     </p></b>
                     <a href="https://jeopardy.andrewchen51.repl.co/" target="_blank">
                         <button>Visit website</button>
