defered every script tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Website of Andrew Chen</title>
     <link rel="stylesheet" href="/site.css">
-    <script src="/site.js"></script>
+    <script src="/site.js" defer></script>
     <link rel="icon" href="https://raw.githubusercontent.com/actiniumn404/actiniumn404.github.io/main/favicon.png">
     <style>
         h2#username{
