--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://raw.githubusercontent.com/actiniumn404/actiniumn404.github.io/main/favicon.png">
     <title>About Andrew</title>
     <link rel="stylesheet" href="/site.css">
-    <script src="/site.js"></script>
+    <script src="/site.js" defer></script>
 </head>
 <body>
     <nav>
