--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             font-weight: bolder;
         }
     </style>
-    <script src="/site.js"></script>
+    <script src="/site.js" defer></script>
 </head>
 <body>
     <main style="text-align:center;color:white;">
