--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,8 @@
         p{
             color:white;
             font-size:18px;
+            margin:0;
+            width:auto;
         }
         button{
             border:2px white solid;
@@ -60,21 +62,16 @@
             flex-wrap: wrap;
             justify-content: space-evenly;
         }
+        h1{
+            font-size:revert;
+            color:white !important;
+        }
     </style>
     <script>
 
     </script>
 </head>
 <body>
-    <nav>
-        <span><a href="/">{Hi I'm Andrew}</a></span>
-        <div>
-            <a class="navbarlink dmm" href="/about" style="left:0;">About</a>
-            <a class="navbarlink dmm" href="/portfolio" style="left:25%;">Portfolio</a>
-            <a class="navbarlink dmm" href="/contact" style="left:50%;">Contact</a>
-            <a class="navbarlink dmm" href="/other" style="left:75%;">Other</a>
-        </div>
-    </nav>
     <main>
         <div class="project">
             <div class="project_content">
