FULL Website Remodel!

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,8 @@
     <script src="/site.js" defer></script>
 </head>
 <body>
-    <main style="text-align:center;">
+    <main>
+      <section style="text-align:center;">
         <h1>About Andrew</h1>
         <img src="https://dummyimage.com/500x350/3b3b3b/ffffff.png&text=Insert+Bad+Photo+Here">
         <p><span style="color:var(--cyan);">{Hi I'm Andrew!}</span> I'm a possibily overzealous programmer that likes to web develop. 
@@ -17,6 +18,7 @@
             I hope to learn a new language soon, learning the web developing combo was really fun! If I am not in class, you can find me biking and coding.
         </p>
         <a href="/contact"><button>Drop me a line!</button></a>
+      </section>
     </main>
 </body>
 </html>
