--- a/index.html
+++ b/index.html
@@ -1,222 +1,81 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>The Website of Andrew Chen</title>
-		<style>
-			* {
-				box-sizing: border-box;
-			}
-			body {
-				margin: 0;
-				height: 100vh;
-				background-color: rgb(30, 30, 30);
-				color: #ccc;
-				font-family: "Open Sans", sans-serif;
-			}
-			@font-face {
-				font-family: "codicon";
-				src: url("https://microsoft.github.io/vscode-codicons/dist/codicon.ttf?01396d1843cb318e1089a78e8dee6985")
-					format("truetype");
-			}
-			@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
-			@font-face {
-				src: url("https://vscodeweb.azureedge.net/stable/7f6ab5485bbc008386c4386d08766667e155244e/extensions/theme-seti/icons/seti.woff")
-					format("woff");
-				font-family: "seti";
-				font-weight: normal;
-				font-style: normal;
-				font-display: block;
-			}
-			.codicon,
-			.langicon {
-				font-family: codicon;
-				display: block;
-				text-decoration: none;
-				text-rendering: auto;
-				text-align: center;
-				-webkit-font-smoothing: antialiased;
-				-moz-osx-font-smoothing: grayscale;
-				user-select: none;
-				-webkit-user-select: none;
-				-ms-user-select: none;
-			}
-			.langicon {
-				font-family: "seti";
-				padding-right: 6px;
-				font-weight: bold;
-				width: fit-content;
-				width: -moz-fit-content;
-				display: inline-block;
-			}
-			.codicon::before {
-				content: var(--id);
-			}
-			nav aside {
-				background-color: rgb(51, 51, 51);
-				width: 48px;
-				height: 100%;
-				float: left;
-			}
-			nav {
-				height: calc(100% - 27px);
-				width: fit-content;
-				width: -moz-fit-content;
-				float: left;
-			}
-			.navbarbutton {
-				width: 48px;
-				height: 48px;
-				display: flex;
-				font-size: 24px;
-				align-items: center;
-				justify-content: center;
-				background-color: transparent;
-				cursor: pointer;
-				border: 0;
-				color: rgba(255, 255, 255, 0.4);
-			}
-			.navbarbutton:hover {
-				color: rgb(255, 255, 255);
-			}
-			.navbarbutton.active {
-				color: rgb(255, 255, 255);
-			}
-			nav div {
-				background-color: rgb(37, 37, 38);
-				width: 300px;
-				height: 100%;
-				float: right;
-			}
-			.navtitle {
-				color: rgb(187, 187, 187);
-				font-size: 13px;
-				line-height: 35px;
-				padding-left: 24px;
-				text-transform: uppercase;
-			}
-			.file {
-				padding-left: 24px;
-				height: 22px;
-				font-size: 13px;
-				line-height: 22px;
-				cursor: pointer;
-			}
-			.file:hover {
-				background-color: #2a2d2e;
-			}
-			.file.active {
-				background-color: #37373d;
-			}
-			#main {
-				width: calc(100% - 348px);
-				float: right;
-                opacity: 0;
-                transition: 1s ease;
-			}
-			#runlog {
-				background-color: #37373d;
-				padding: 10px;
-				width: 100px;
-				position: absolute;
-				right: 0px;
-				top: 0px;
-			}
-			#runcode {
-				--id: "\eb2c";
-				font-weight: bold;
-				color: rgb(17, 187, 17);
-				width: fit-content;
-				width: -moz-fit-content;
-                cursor: pointer;
-			}
-            #runcode:hover{
-                filter: brightness(0.8);
-            }
 
-            @keyframes cursor {
-                from{
-                    top: 20vh;
-                    left:50vw;
-                }
-                100%{
-                    top: 10px;
-                    left:calc(100vw - 95px);
-                }
-            }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/images/favicon.png">
+  <title>The Website of Andrew Chen</title>
+  <style id="ccss"></style>
+	<link href="/site.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
 
-            #cursor{
-                position: absolute;
-                top:10px;
-                left:calc(100vw - 95px);
-                animation: cursor 2s ease;
-            }
-
- 			footer {
-				height: 27px;
-				width: 100%;
-				background-color: rgb(0, 122, 204);
-				position: absolute;
-				bottom: 0px;
-				padding:5px;
-				font-size:14px;
-				color:white;
-				line-height: 17px;
-				padding-left:15px;
-				text-align: center;
-			}
-			@keyframes bigtext {
-				0%{font-size: inherit;color:rgb(255, 154, 196);}
-				50%{font-size: 17px;color:rgb(255, 255, 142);}
-				100%{font-size: inherit;color:rgb(255, 154, 196);}
-			}
-			#crightmore{
-				animation:ease 1s bigtext infinite;
-				user-select: none;
-				cursor: pointer;
-			}
-		</style>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	</head>
-	<body>
-		<nav>
-			<aside>
+<body>
+  <nav>
+    <aside>
+			<a href="https://github.com/actiniumn404/actiniumn404.github.io" target="_blank" id="navgithub">
 				<button class="navbarbutton">
 					<span class="codicon" style="--id: '\ea84'"></span>
 				</button>
-				<button class="navbarbutton active">
-					<span class="codicon" style="--id: '\eaf0'"></span>
-				</button>
-			</aside>
-			<div>
-				<div id="navexplorer">
-					<span class="navtitle">File System</span>
-					<div class="file active">
-						<span class="langicon" style="color: #e37933; --id: '\E046'"
-							>&lt;&nbsp;&gt;</span
-						>
-						Homepage.html
-					</div>
-					<div class="file">
-						<span class="langicon" style="color: #e37933; --id: '\E046'"
-							>&lt;&nbsp;&gt;</span
-						>
-						About.html
-					</div>
+			</a>
+
+      <button class="navbarbutton" onclick="opennav('navexplorer', this)" id="navfiles">
+        <span class="codicon" style="--id: '\eaf0'"></span>
+      </button>
+
+			<button class="navbarbutton active" onclick="opennav('runlog', this)" id="navdebug">
+        <span class="codicon" style="--id: '\eb91'"></span>
+      </button>
+
+    </aside>
+    <div>
+      <div id="navexplorer" style="display: none;">
+        <span class="navtitle">File System</span>
+
+        <div class="file active">
+          <span class="langicon" style="color: #e37933; --id: '\E046'">&lt;&nbsp;&gt;</span>
+          <span>homepage.html</span>
+        </div>
+
+        <div class="file">
+          <span class="langicon" style="color: #e37933; --id: '\E046'">&lt;&nbsp;&gt;</span>
+          <span>about.html</span>
+        </div>
+
+        <div class="file">
+          <span class="langicon" style="color: #e37933; --id: '\E046'">&lt;&nbsp;&gt;</span>
+          <span>copyright.html</span>
+        </div>
+
+
+        <div class="file">
+          <span class="langicon" style="color: #e37933; --id: '\E046'">&lt;&nbsp;&gt;</span>
+          <span>portfolio.html</span>
+        </div>
+
+      </div>
+			<div id="runlog">
+				<span class="navtitle" style="padding: 0;">Debug/Run code</span><br>
+				<input type="checkbox" id="animationChoice" for="animationChoice" checked onchange="changedp()"><label for="animationChoice">Use animation</label>
+				<br><br>
+				<div>
+					<span class="codicon" id="runcode" onclick="init()" style="line-height:20px">Run code&nbsp;</span><br>
+					<label for="typewriterDuration">Number of <a href="https://en.wikipedia.org/wiki/Millisecond" target="_blank">milliseconds</a> the typewriter animation takes</label>
+					<input type="number" value="3000" min="100" id="typewriterDuration" max="40000" name="typewriterDuration">
 				</div>
 			</div>
-		</nav>
-		<div id="runlog">
-			<span class="codicon" id="runcode" onclick="init()"></span>
-		</div>
-        <img src="https://lmddgtfy.net/img/cursor-default.png" id="cursor">
-		<main id="main">
-			Nothing here
-		</main>
+    </div>
+  </nav>
+  <img src="/images/cursor.png" id="cursor" width="15px">
+  <main id="main">
+    Nothing here
+  </main>
 
-		<footer><i>Website</i> made by actiniumn404. This is not affiliated in any way with Microsoft Corporation. No copyright infringement is intended. <span id="crightmore" onclick="o('/copyright.txt')">[MORE]</span></footer>
+  <footer><i>Website</i> made by actiniumn404. This is not affiliated in any way with Microsoft Corporation. No copyright infringement is intended. <span id="crightmore" onclick="o('copyright.html')">[MORE]</span></footer>
 
-		<script src="/site.js"></script>
-	</body>
+  <script src="/site.js"></script>
+  <script id="cjs"></script>
+</body>
+
 </html>
