--- a/about.html
+++ b/about.html
@@ -2,6 +2,24 @@
 <html>
 
 	<head>
+		<!-- Primary Meta Tags -->
+		<title>Actiniumn404</title>
+		<meta name="title" content="Actiniumn404">
+		<meta name="description" content="Hi! I'm Andrew. I'm an overzealous web developer and Python programmer who has made some really cool websites. ">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://metatags.io/">
+		<meta property="og:title" content="Actiniumn404">
+		<meta property="og:description" content="Hi! I'm Andrew. I'm an overzealous web developer and Python programmer who has made some really cool websites. ">
+		<meta property="og:image" content="assets/meta_bg.jpg">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://metatags.io/">
+		<meta property="twitter:title" content="Actiniumn404">
+		<meta property="twitter:description" content="Hi! I'm Andrew. I'm an overzealous web developer and Python programmer who has made some really cool websites. ">
+		<meta property="twitter:image" content="assets/meta_bg.jpg">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="assets/favicon.png">
