--- a/blog.html
+++ b/blog.html
@@ -38,10 +38,14 @@
 			<img src="https://avatars.githubusercontent.com/u/83673744">
 		</header>
 		<section id="blog_cont">
-			<h1 class="bold">This blog has not been completed yet. Maybe check later.</h1>
+			<div class="spinnercont">
+				<img src="https://avatars.githubusercontent.com/u/83673744" width=200 class="spinner">
+				Loading
+			</div>
 		</section>
+		<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 		<script src="js/site.js" defer></script>
-
+		<script src="js/blog.js" defer></script>
 	</body>
 
 </html>
