--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 		</header>
 		<section>
 			<h1 class="bold">My Profiles</h1>
-			<table>
+			<!--<table>
 				<tr>
 					<td>GitHub</td>
 					<td><a href="https://github.com/actiniumn404">Actiniumn404</a></td>
@@ -64,7 +64,24 @@
 					<td>Phone Number</td>
 					<td>No.</td>
 				</tr>
-			</table>
+			</table>-->
+			<div id="apps">
+				<a href="https://github.com/actiniumn404" target="_blank">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/GitHub_Mark.png" width=100>
+				</a>
+				<a href="https://replit.com/@AndrewChen51" target="_blank">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Repl.it_logo.svg" width=100>
+				</a>
+				<a href="https://aops.com/community/user/andrewc10" target="_blank">
+					<img src="https://avatars.githubusercontent.com/u/40152760" width=100>
+				</a>
+				<a href="https://discordapp.com/users/728297793646624819" target="_blank">
+					<img src="/assets/discord.svg" width=100>
+				</a>
+				<a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=actinium.coder.928@gmail.com" target="_blank">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" width=100>
+				</a>
+			</div>
 		</section>
 		<script src="js/site.js" defer></script>
 
