--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</section>
 		<section id="projects">
 			<h1 class="bold">Featured Project</h1>
-			<a href="/about.html">See all projects &gt;</a>
+			<a href="/projects.html">See all projects &gt;</a>
 		</section>
 		<script src="js/site.js" defer></script>
 		<script src="js/main.js" defer></script>
